# mind_your_sides

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
doc/: template.md
src/: main.rs  utils.rs
src/game/: animation.rs  castle.rs  damage.rs  enemies.rs  mod.rs  upgrades.rs  weapons.rs
src/game/damage/: area.rs  mod.rs  projectile.rs
src/game/enemies/: mod.rs  spawn.rs
src/game/upgrades/: apply.rs  mod.rs
src/game/weapons/: area.rs  crossbow.rs  mod.rs  molotov.rs  projectile.rs
src/ui/: main_menu.rs  mod.rs
src/ui/in_game/: game_over.rs  hud.rs  level_up.rs  mod.rs  pause.rs  player.rs  side_stats.rs
src/ui/in_game/pause/: mod.rs  settings.rs
src/ui/main_menu/: mod.rs  settings.rs  title_screen.rs
