[package]
name = "mad_crabs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Optimize release builds for size, use LTO
[profile.release]
opt-level = "z"
lto = "thin"
strip = true

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking", "wayland"] }
bevy_rapier2d = "0.21.0"
