[package]
name = "mad_crabs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Optimize release builds for size, use LTO
[profile.release]
opt-level = "z"
lto = "thin"
strip = true

[dependencies]
bevy = { version = "0.10.1", default-features = false, features = [
  "animation",
  "bevy_asset", 
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "png",
  "wayland",
  "x11",
  "dynamic_linking"
]}
bevy-inspector-egui = "0.18.3"
bevy_asset_loader = { version = "0.16.0", features = ["2d"] }
bevy_kira_audio = "0.15.0"
bevy_rapier2d = "0.21.0"
